aws-saas/poc-files/docker-stuff/sso/sso-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-2
spec:
  selector:
    matchLabels:
      app: sso-2
  replicas: 1
  template:
    metadata:
      labels:
        app: sso-2
    spec:
      containers:
      - name: sso-2
        image: dockerregistry:5000/rhel6cmserv-test
        ports:
          - containerPort: 8080
          - containerPort: 9990
          - containerPort: 9999
          - containerPort: 4447
        command: ["/bin/bash"]
        args: ["-c","while true; do sleep 10;done"]
        volumeMounts:
          - name: data
            mountPath: /ericsson/tor/data
          - name: mdt
            mountPath: /etc/opt/ericsson/ERICmodeldeployment      
          - name: home
            mountPath: /home/shared
          - name: custom
            mountPath: /ericsson/custom
          - name: dumps
            mountPath: /ericsson/enm/dumps
          - name: dlms
            mountPath: /ericsson/enm/dlms/history/data
          - name: batch
            mountPath: /ericsson/batch
          - name: norollback
            mountPath: /ericsson/no_rollback
      volumes:
        - name: data
          nfs:
            server: nfsdata
            path: "/ericsson/data"
        - name: dumps
          nfs:
            server: nfshcdumps
            path: "/ericsson/hcdumps"
        - name: mdt
          nfs:
            server: nfsmdt
            path: "/ericsson/mdt"
        - name: home
          nfs:
            server: nfshome
            path: "/ericsson/home"
        - name: custom
          nfs:
            server: nfscustom
            path: "/ericsson/custom"
        - name: dlms
          nfs:
            server: nfsdlms
            path: "/ericsson/dlms"
        - name: batch
          nfs:
            server: nfsbatch
            path: "/ericsson/batch"
        - name: norollback
          nfs:
            server: nfsnorollback
            path: "/ericsson/no_rollback"
