aws-saas/poc-files/docker-stuff/sso/sso-lb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sso-lb
spec:
  rules:
  - host: sso.enmk8s.athtem.eei.ericsson.se
    http:
      paths:
      - path: /
        backend:
          serviceName: haproxy
          servicePort: 8080
